upgrade to mt4j 0.98